fix: uniform gap in item-detail footer

--- a/client/css/_item-detail-view.scss
+++ b/client/css/_item-detail-view.scss
@@ -142,9 +142,8 @@
     align-items: center;
     border-top: 1px solid $color-border;
     display: flex;
-    gap: 10px;
+    gap: 8px;
     flex-wrap: nowrap;
-    justify-content: space-between;
     padding: 14px 20px;
 
     .itemDetailFooterSecondary,
